m6_pre1 seed commit
commit of 1.8.9 optifine m6_pre1 source with no additions/deletions