@@ -1,17 +1,24 @@
 package net.minecraft.util;
 
-public class IntegerCache {
-   private static final Integer[] field_181757_a = new Integer[65535];
+public class IntegerCache
+{
+    private static final Integer[] CACHE = new Integer[65535];
 
-   public static Integer func_181756_a(int p_181756_0_) {
-      return p_181756_0_ > 0 && p_181756_0_ < field_181757_a.length?field_181757_a[p_181756_0_]:Integer.valueOf(p_181756_0_);
-   }
+    /**
+     * Get an Integer from the cache if it exists, otherwise return {@code Integer.valueOf()}
+     */
+    public static Integer getInteger(int value)
+    {
+        return value >= 0 && value < CACHE.length ? CACHE[value] : new Integer(value);
+    }
 
-   static {
-      int i = 0;
+    static
+    {
+        int i = 0;
 
-      for(int j = field_181757_a.length; i < j; ++i) {
-         field_181757_a[i] = Integer.valueOf(i);
-      }
-   }
+        for (int j = CACHE.length; i < j; ++i)
+        {
+            CACHE[i] = Integer.valueOf(i);
+        }
+    }
 }
